--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOla5cqfWE220DnwS+26lj7",
+      "authorship_tag": "ABX9TyO4EV9surx17DDuK8mIUsSs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,85 +30,64 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "YSbRWBLeocuC"
+        "id": "8w41QYyShXkS"
       },
       "outputs": [],
-      "source": [
-        "Assignment"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "lFtZb2DrqH0J"
+        "id": "r7PvOfrAienl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "jLFQHJm5icmA"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "In linear algebra, the inner product (also called the dot product) is a way to multiply two vectors, resulting in a scalar. It is defined as the sum of the products of corresponding components of two vectors. For vectors 𝑎 = ( 𝑎 1 , 𝑎 2 , … , 𝑎 𝑛 ) a=(a 1​,a 2​,…,a n​) and 𝑏 = ( 𝑏 1 , 𝑏 2 , … , 𝑏 𝑛 ) b=(b 1​,b 2​,…,b n​), the inner product is:\n",
+        "**1)Difference between inner and outer product?**\n",
         "\n",
-        "𝑎 ⋅ 𝑏 = 𝑎 1 𝑏 1 + 𝑎 2 𝑏 2 + ⋯ + 𝑎 𝑛 𝑏 𝑛 a⋅b=a 1​b 1​+a 2​b 2​+⋯+a n​b n​\n",
+        "Inner Product (Dot Product) The inner product takes two vectors of the same size, multiplies their corresponding elements, and sums the results. This operation produces a single scalar value and is often used to measure the similarity or alignment between two vectors. For example, given [1,2] and [3,4] the inner. product is calculated as, (1 * 3) + (2 * 4)=11.\n",
         "\n",
-        "The outer product of two vectors results in a matrix. For vectors 𝑎 a (of size 𝑚 × 1 m×1) and 𝑏 b (of size 𝑛 × 1 n×1), the outer product 𝑎 ⊗ 𝑏 a⊗b is an 𝑚 × 𝑛 m×n matrix, where each element is the product of corresponding components of the vectors\n",
+        "Outer product\n",
+        "\n",
+        "The outer product pairs each element of one vector with every element of another vector, multiplying them to create a collection of results. This operation generates a structured set of values, often used in applications like constructing grids or rank-1 tensors. For instance, for [1,2] and [3,4],the outer product involves (1 * 3), (1 * 4), ( 2 * 3), (2 * 4), yielding [3,4,6,8].\n",
         "\n",
         "\n",
         "\n",
-        "The norm of a matrix is a measure of its \"size\" or \"magnitude,\" similar to how vector norms measure the length of vectors. Common matrix norms include the Frobenius norm, which is the square root of the sum of the absolute squares of all its entries, and operator norms (such as the spectral norm), which are based on the matrix's singular values. The Frobenius norm of a matrix\n",
-        "𝐴\n",
-        "=\n",
-        "[\n",
-        "𝑎\n",
-        "𝑖\n",
-        "𝑗\n",
-        "]\n",
-        "A=[a\n",
-        "ij\n",
-        "​\n",
-        " ] is given by:\n",
         "\n",
-        "∥\n",
-        "𝐴\n",
-        "∥\n",
-        "𝐹\n",
-        "=\n",
-        "∑\n",
-        "𝑖\n",
-        ",\n",
-        "𝑗\n",
-        "∣\n",
-        "𝑎\n",
-        "𝑖\n",
-        "𝑗\n",
-        "∣\n",
-        "2\n",
-        "∥A∥\n",
-        "F\n",
-        "​\n",
-        " =\n",
-        "i,j\n",
-        "∑\n",
-        "​\n",
-        " ∣a\n",
-        "ij\n",
-        "​\n",
-        " ∣\n",
-        "2\n",
+        "2)What are norms? what are the different types of norms?\n",
         "\n",
-        "​\n",
         "\n",
-        "The spectral norm is the largest singular value of the matrix, and it is used to measure the largest stretching factor of the matrix when applied to a vector. Norms are essential in analyzing the stability and behavior of matrix operations."
+        "A norm is a mathematical function that measures the \"size\" or \"length\" of a vector in a vector space. It provides a way to quantify the magnitude of a vector without considering its direction. Norms are widely used in linear algebra, machine learning, and numerical analysis to analyze vector properties and optimize algorithms.\n",
+        "A norm must satisfy these properties:\n",
+        "Non-Negativity\n",
+        "Homogeneity\n",
+        "Triangle Inequality\n",
+        "Defined on a Vector Space\n",
+        "\n",
+        "Different Types of Norms:\n",
+        "\n",
+        "L1 Norm (Manhattan or Taxicab Norm): Definition: Sum of the absolute values of vector components.\n",
+        "\n",
+        "L2 Norm (Euclidean Norm): Definition: Square root of the sum of squared vector components.\n",
+        "\n",
+        "Infinity Norm (Maximum Norm): Definition: The maximum absolute value of the vector components.\n",
+        "\n",
+        "\n",
+        "Lp Norm (Generalized Norm): Definition: A generalization of L1, L2, and infinity norms.\n",
+        "\n",
+        "Frobenius Norm (for matrices): Definition: Square root of the sum of all squared elements in a matrix."
       ],
       "metadata": {
-        "id": "685CmPeLojOt"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "xMjuHLYrqI44"
+        "id": "X7D1Y0hKiVHw"
       }
     }
   ]
